@@ -2,10 +2,11 @@ v1.1.2
 Improved : faster decompression speed at ultra compression settings and in 32-bits mode
 cli : new : gzstd, experimental version able to decode .gz files, by Przemyslaw Skibinski
 cli : new : preserve file attributes
-cli : new : added zstdless
+cli : new : added zstdless and zstdgrep tools
 cli : fixed : status displays total amount decoded, even for file consisting of multiple frames (like pzstd)
 cli : fixed : zstdcat
 API : changed : zbuff prototypes now generate deprecation warnings
+API : changed : streaming decompression implicit reset on starting new frame
 Changed : reduced stack memory use
 
 v1.1.1
